ref/Eshmun/src/t7/grammar/T7Parser.java
// Generated from T7.g4 by ANTLR 4.4
package t7.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class T7Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE=1, COMMENT=2, TRUE=3, FALSE=4, GT=5, GE=6, LT=7, LE=8, BQ=9, NQ=10, 
		AND=11, OR=12, NOT=13, PLUS=14, MINUS=15, MULT=16, DIV=17, MOD=18, POW=19, 
		CLEAR=20, LET=21, INSTANCE=22, DEFINEO=23, DEFINE=24, FOR=25, WHILE=26, 
		IF=27, ELSE=28, END=29, IN=30, LOAD=31, EXPORTO=32, EXPORT=33, START=34, 
		LIST=35, DEL=36, EXTRACT=37, SEARCH=38, STATES=39, TRANSITIONS=40, SPECIFICATIONS=41, 
		EQ=42, TP=43, SEMI=44, COMMA=45, LP=46, RP=47, LC=48, RC=49, LS=50, RS=51, 
		DOT=52, SINGLEAND=53, SINGLECOL=54, ID=55, INT=56, WS=57, ANYTHING_ELSE=58;
	public static final String[] tokenNames = {
		"<INVALID>", "LINE", "'//'", "'true'", "'false'", "'>'", "'>='", "'<'", 
		"'<='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", "'/'", 
		"'%'", "'^'", "'clear'", "'let'", "'instance'", "'@define'", "'define'", 
		"'for'", "'while'", "'if'", "'else'", "'end'", "'in'", "'load'", "'@export'", 
		"'export'", "'start'", "'list'", "'del'", "'extract'", "'search'", "'states:'", 
		"'transitions:'", "'specifications:'", "'='", "':'", "';'", "','", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "'.'", "'&'", "'|'", "ID", "INT", "WS", 
		"ANYTHING_ELSE"
	};
	public static final int
		RULE_statement = 0, RULE_var_definition = 1, RULE_instantiation = 2, RULE_structure_definition = 3, 
		RULE_clear = 4, RULE_load = 5, RULE_export = 6, RULE_start = 7, RULE_list = 8, 
		RULE_search = 9, RULE_del = 10, RULE_extract = 11, RULE_header = 12, RULE_for_loop = 13, 
		RULE_while_loop = 14, RULE_if_cond = 15, RULE_code_body = 16, RULE_else_cond = 17, 
		RULE_if_body = 18, RULE_condition = 19, RULE_definition_body = 20, RULE_states_def = 21, 
		RULE_transitions_def = 22, RULE_specifications_def = 23, RULE_lines = 24, 
		RULE_state_def = 25, RULE_transition_def = 26, RULE_def_term = 27, RULE_identifier = 28, 
		RULE_range = 29, RULE_arith_exp = 30, RULE_arith_exp1 = 31, RULE_arith_exp2 = 32, 
		RULE_arith_exp3 = 33, RULE_atomic_arith_exp = 34, RULE_bool_exp = 35, 
		RULE_bool_exp1 = 36, RULE_bool_exp2 = 37, RULE_bool_exp3 = 38, RULE_atomic_bool_exp = 39, 
		RULE_bool_arith_exp = 40, RULE_bool_op = 41, RULE_value = 42, RULE_triplet = 43, 
		RULE_triplet_term = 44, RULE_comment = 45, RULE_new_line = 46, RULE_any = 47;
	public static final String[] ruleNames = {
		"statement", "var_definition", "instantiation", "structure_definition", 
		"clear", "load", "export", "start", "list", "search", "del", "extract", 
		"header", "for_loop", "while_loop", "if_cond", "code_body", "else_cond", 
		"if_body", "condition", "definition_body", "states_def", "transitions_def", 
		"specifications_def", "lines", "state_def", "transition_def", "def_term", 
		"identifier", "range", "arith_exp", "arith_exp1", "arith_exp2", "arith_exp3", 
		"atomic_arith_exp", "bool_exp", "bool_exp1", "bool_exp2", "bool_exp3", 
		"atomic_bool_exp", "bool_arith_exp", "bool_op", "value", "triplet", "triplet_term", 
		"comment", "new_line", "any"
	};

	@Override
	public String getGrammarFileName() { return "T7.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public T7Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatementContext extends ParserRuleContext {
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public InstantiationContext instantiation() {
			return getRuleContext(InstantiationContext.class,0);
		}
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public Structure_definitionContext structure_definition() {
			return getRuleContext(Structure_definitionContext.class,0);
		}
		public ClearContext clear() {
			return getRuleContext(ClearContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ExtractContext extract() {
			return getRuleContext(ExtractContext.class,0);
		}
		public New_lineContext new_line() {
			return getRuleContext(New_lineContext.class,0);
		}
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public ExportContext export() {
			return getRuleContext(ExportContext.class,0);
		}
		public DelContext del() {
			return getRuleContext(DelContext.class,0);
		}
		public SearchContext search() {
			return getRuleContext(SearchContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public If_condContext if_cond() {
			return getRuleContext(If_condContext.class,0);
		}
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			switch (_input.LA(1)) {
			case DEFINEO:
			case DEFINE:
				{
				setState(96); structure_definition();
				}
				break;
			case LET:
			case ID:
				{
				setState(97); var_definition();
				}
				break;
			case INSTANCE:
				{
				setState(98); instantiation();
				}
				break;
			case COMMENT:
				{
				setState(99); comment();
				}
				break;
			case CLEAR:
				{
				setState(100); clear();
				}
				break;
			case FOR:
				{
				setState(101); for_loop();
				}
				break;
			case WHILE:
				{
				setState(102); while_loop();
				}
				break;
			case IF:
				{
				setState(103); if_cond();
				}
				break;
			case LOAD:
				{
				setState(104); load();
				}
				break;
			case EXPORTO:
			case EXPORT:
				{
				setState(105); export();
				}
				break;
			case START:
				{
				setState(106); start();
				}
				break;
			case LIST:
				{
				setState(107); list();
				}
				break;
			case DEL:
				{
				setState(108); del();
				}
				break;
			case SEARCH:
				{
				setState(109); search();
				}
				break;
			case EXTRACT:
				{
				setState(110); extract();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(115);
			switch (_input.LA(1)) {
			case COMMENT:
				{
				setState(113); comment();
				}
				break;
			case LINE:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(117); new_line();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_definitionContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode EQ() { return getToken(T7Parser.EQ, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LET() { return getToken(T7Parser.LET, 0); }
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterVar_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitVar_definition(this);
		}
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			switch (_input.LA(1)) {
			case LET:
				{
				setState(119); match(LET);
				}
				break;
			case ID:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(123); identifier();
			setState(124); match(EQ);
			setState(125); value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstantiationContext extends ParserRuleContext {
		public TerminalNode INSTANCE() { return getToken(T7Parser.INSTANCE, 0); }
		public RangeContext range(int i) {
			return getRuleContext(RangeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(T7Parser.COMMA); }
		public TerminalNode LT() { return getToken(T7Parser.LT, 0); }
		public TerminalNode GT() { return getToken(T7Parser.GT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<RangeContext> range() {
			return getRuleContexts(RangeContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(T7Parser.COMMA, i);
		}
		public InstantiationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instantiation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterInstantiation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitInstantiation(this);
		}
	}

	public final InstantiationContext instantiation() throws RecognitionException {
		InstantiationContext _localctx = new InstantiationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instantiation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(INSTANCE);
			setState(128); identifier();
			setState(129); match(LT);
			setState(130); range();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(131); match(COMMA);
				setState(132); range();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138); match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Structure_definitionContext extends ParserRuleContext {
		public List<LinesContext> lines() {
			return getRuleContexts(LinesContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode LT() { return getToken(T7Parser.LT, 0); }
		public TerminalNode DEFINEO() { return getToken(T7Parser.DEFINEO, 0); }
		public TerminalNode GT() { return getToken(T7Parser.GT, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(T7Parser.COMMA, i);
		}
		public LinesContext lines(int i) {
			return getRuleContext(LinesContext.class,i);
		}
		public TerminalNode DEFINE() { return getToken(T7Parser.DEFINE, 0); }
		public TerminalNode RC() { return getToken(T7Parser.RC, 0); }
		public TerminalNode LC() { return getToken(T7Parser.LC, 0); }
		public List<TerminalNode> COMMA() { return getTokens(T7Parser.COMMA); }
		public Definition_bodyContext definition_body() {
			return getRuleContext(Definition_bodyContext.class,0);
		}
		public Structure_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structure_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterStructure_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitStructure_definition(this);
		}
	}

	public final Structure_definitionContext structure_definition() throws RecognitionException {
		Structure_definitionContext _localctx = new Structure_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_structure_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_la = _input.LA(1);
			if ( !(_la==DEFINEO || _la==DEFINE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(141); identifier();
			setState(142); match(LT);
			setState(143); identifier();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(144); match(COMMA);
				setState(145); identifier();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151); match(GT);
			setState(152); lines();
			setState(153); match(LC);
			setState(154); lines();
			setState(155); definition_body();
			setState(156); match(RC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClearContext extends ParserRuleContext {
		public TerminalNode CLEAR() { return getToken(T7Parser.CLEAR, 0); }
		public ClearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clear; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterClear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitClear(this);
		}
	}

	public final ClearContext clear() throws RecognitionException {
		ClearContext _localctx = new ClearContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_clear);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158); match(CLEAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadContext extends ParserRuleContext {
		public TerminalNode LOAD() { return getToken(T7Parser.LOAD, 0); }
		public AnyContext any() {
			return getRuleContext(AnyContext.class,0);
		}
		public LoadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_load; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterLoad(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitLoad(this);
		}
	}

	public final LoadContext load() throws RecognitionException {
		LoadContext _localctx = new LoadContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_load);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160); match(LOAD);
			setState(161); any();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportContext extends ParserRuleContext {
		public TerminalNode EXPORTO() { return getToken(T7Parser.EXPORTO, 0); }
		public AnyContext any() {
			return getRuleContext(AnyContext.class,0);
		}
		public TerminalNode EXPORT() { return getToken(T7Parser.EXPORT, 0); }
		public ExportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_export; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterExport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitExport(this);
		}
	}

	public final ExportContext export() throws RecognitionException {
		ExportContext _localctx = new ExportContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_export);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_la = _input.LA(1);
			if ( !(_la==EXPORTO || _la==EXPORT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(164); any();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(T7Parser.START, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); match(START);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalNode LIST() { return getToken(T7Parser.LIST, 0); }
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168); match(LIST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SearchContext extends ParserRuleContext {
		public TerminalNode SEARCH() { return getToken(T7Parser.SEARCH, 0); }
		public AnyContext any() {
			return getRuleContext(AnyContext.class,0);
		}
		public SearchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_search; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterSearch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitSearch(this);
		}
	}

	public final SearchContext search() throws RecognitionException {
		SearchContext _localctx = new SearchContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_search);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); match(SEARCH);
			setState(171); any();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DelContext extends ParserRuleContext {
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public TerminalNode DEL() { return getToken(T7Parser.DEL, 0); }
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public DelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_del; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterDel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitDel(this);
		}
	}

	public final DelContext del() throws RecognitionException {
		DelContext _localctx = new DelContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_del);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173); match(DEL);
			setState(175); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(174); header();
				}
				}
				setState(177); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtractContext extends ParserRuleContext {
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public TerminalNode EXTRACT() { return getToken(T7Parser.EXTRACT, 0); }
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public ExtractContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extract; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterExtract(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitExtract(this);
		}
	}

	public final ExtractContext extract() throws RecognitionException {
		ExtractContext _localctx = new ExtractContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_extract);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179); match(EXTRACT);
			setState(181); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(180); header();
				}
				}
				setState(183); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(T7Parser.INT, i);
		}
		public TerminalNode RP() { return getToken(T7Parser.RP, 0); }
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode LP() { return getToken(T7Parser.LP, 0); }
		public List<TerminalNode> COMMA() { return getTokens(T7Parser.COMMA); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public List<TerminalNode> INT() { return getTokens(T7Parser.INT); }
		public TerminalNode COMMA(int i) {
			return getToken(T7Parser.COMMA, i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185); identifier();
			setState(186); match(LP);
			setState(189);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(187); identifier();
				}
				break;
			case INT:
				{
				setState(188); match(INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(191); match(COMMA);
				setState(194);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(192); identifier();
					}
					break;
				case INT:
					{
					setState(193); match(INT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(201); match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_loopContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(T7Parser.FOR, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public TerminalNode IN() { return getToken(T7Parser.IN, 0); }
		public Code_bodyContext code_body() {
			return getRuleContext(Code_bodyContext.class,0);
		}
		public For_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).enterFor_loop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof T7Listener ) ((T7Listener)listener).exitFor_loop(this);
		}
	}

	public final For_loopContext for_loop() throws RecognitionException {
		For_loopContext _localctx = new For_loopContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_for_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203); match(FOR);
			setState(204); identifier();
			setState(205); match(IN);
			setState(206); range();
			setState(207); code_body();
			}
		}
